<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:paddingTop="80dp"
    tools:context=".features.age_calculator.AgeCalculatorLegacyActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/colorPrimaryContainer"
        android:gravity="center"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age_calc_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBirthdatePicker"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_calc_datepicker"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:icon="@drawable/ic_round_calendar_month_24dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09/13/2003"
                android:textColor="?attr/colorSecondary"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_calc_selected_date"
                android:textColor="?attr/colorTertiary"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSelectedDateInMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:textIsSelectable="true"
                android:textSize="35sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_in_minutes"
                android:textColor="?attr/colorTertiary"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSelectedDateInHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:textIsSelectable="true"
                android:textSize="35sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_in_hours"
                android:textColor="?attr/colorTertiary"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSelectedDateInDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:textIsSelectable="true"
                android:textSize="35sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_in_days"
                android:textColor="?attr/colorTertiary"
                android:textSize="18sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
