<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
          android:id="@+id/btnAgeCalc"
          style="@style/Widget.Material3.Button.Icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/age_calc"
          android:textColor="@color/white"
          android:textSize="18sp"/>
        
        <Space
          android:layout_width="0dp"
          android:layout_height="20dp" />
                
        <com.google.android.material.button.MaterialButton
          android:id="@+id/btnAgeCalcLegacy"
          style="@style/Widget.Material3.Button.Icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/age_calc_legacy"
          android:textColor="@color/white"
          android:textSize="18sp"/>
        
        <Space
          android:layout_width="0dp"
          android:layout_height="20dp" />
        
        <com.google.android.material.button.MaterialButton
          android:id="@+id/btnDiceRoller"
          style="@style/Widget.Material3.Button.Icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dice_roller"
          android:textColor="@color/white"
          android:textSize="18sp"/>
        
        <Space
          android:layout_width="0dp"
          android:layout_height="20dp" />    
        
        <com.google.android.material.button.MaterialButton
          android:id="@+id/btnDessertClicker"
          style="@style/Widget.Material3.Button.Icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dessert_clicker"
          android:textColor="@color/white"
          android:textSize="18sp"/>
        
        <Space
          android:layout_width="0dp"
          android:layout_height="20dp" />        
    </LinearLayout>
    
      <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="?attr/colorPrimary"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_round_calendar_month_24dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_anchor="@id/bottom_app_bar"
        android:contentDescription="TODO" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
